@@ -4,6 +4,7 @@ package tasks;
 import entities.Employee;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.Test;
+import utils.ArrayUtils;
 
 import java.sql.*;
 import java.time.LocalDate;
@@ -13,17 +14,17 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
 class EmployeeRepositoryTest {
     private static Connection connection;
     private EmployeeRepository employeeRepository = new EmployeeRepository();
-    private static final String DB_URL = "jdbc:postgresql://localhost/bbb";
-    private static final String DB_USER = "postgres";
-    private static final String DB_PASSWORD = "1111";
-
+    private int idForAdding = returnsEmployeesData().size() + 1;
 
     @BeforeAll
     private static void openConnection() throws SQLException {
-        connection = DriverManager.getConnection(DB_URL, DB_USER, DB_PASSWORD);
+        connection = DatabaseConnection.getConnection();
     }
 
     @AfterAll
@@ -58,48 +59,41 @@ class EmployeeRepositoryTest {
 
 
     private static void insertInitialData() throws SQLException {
+        String insertCommand =
+                "INSERT INTO employee (name, surname, phone, position_eml, " +
+                        "date_of_employment, date_of_dismissal, salary) " +
+                        "VALUES " +
+                        "('John', 'Doe', '555-1234', 'Manager', '2023-01-15', NULL, 50000.0), " +
+                        "('Jane', 'Smith', '555-5678', 'Developer', '2022-08-20', NULL, 60000.0), " +
+                        "('Alice', 'Johnson', '555-9876', 'Designer', '2023-03-10', NULL, 45000.0), " +
+                        "('Michael', 'Brown', '555-3456', 'Designer', '2022-11-05', NULL, 55000.0), " +
+                        "('Emily', 'Williams', '555-7890', 'Developer', '2023-02-28', NULL, 52000.0), " +
+                        "('Robert', 'Jones', '555-2345', 'Developer', '2023-04-18', NULL, 48000.0), " +
+                        "('Sophia', 'Miller', '555-6543', 'Accountant', '2022-09-10', NULL, 51000.0), " +
+                        "('Daniel', 'Wilson', '555-8765', 'Designer', '2022-12-22', NULL, 59000.0), " +
+                        "('Olivia', 'Taylor', '555-4321', 'Marketing Specialist', '2023-05-09', NULL, 47000.0), " +
+                        "('William', 'Anderson', '555-8901', 'IT Specialist', '2022-07-12', NULL, 63000.0);";
 
-        String insertCommand = "INSERT INTO employee(name, surname,phone," +
-                "position_eml, date_of_employment, date_of_dismissal, salary) VALUES (?, ?, ?, ?, ?, ?, ?)";
-        List<Employee> employeesData = returnsEmployeesData();
-
-
-        try (PreparedStatement statement = connection.prepareStatement(insertCommand)) {
-            for (Employee employeeData : employeesData) {
-                statement.setString(1, employeeData.getName()); // name
-                statement.setString(2, employeeData.getSurname()); // surname
-                statement.setString(3, employeeData.getPhone()); // phone
-                statement.setString(4, employeeData.getPositionEml()); // position
-                if (employeeData.getDateOfEmployment() != null) {
-                    statement.setDate(5, java.sql.Date.valueOf(employeeData.getDateOfEmployment()));
-                } else {
-                    statement.setNull(5, Types.DATE);
-                }
-                if (employeeData.getDateOfDismissal() != null) {
-                    statement.setDate(6, java.sql.Date.valueOf(employeeData.getDateOfDismissal()));
-                } else {
-                    statement.setNull(6, Types.DATE);
-                }
-                statement.setDouble(7, employeeData.getSalary()); // salary
-
-                statement.addBatch();
-            }
-            statement.executeBatch();
+        try (PreparedStatement preparedStatement = connection.prepareStatement(insertCommand)) {
+            preparedStatement.execute();
         }
 
     }
+
 
     @Nested
     public class FindById {
         @Test
         public void shouldFindByIdWhenValidIdProvided() throws SQLException {
-            String dateString = "2023-01-15";
-            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-            LocalDate date = LocalDate.parse(dateString, formatter);
             Employee expected = new Employee(1, "John", "Doe",
-                    "555-1234", "Manager", date, null, 50000.00);
+                    "555-1234", "Manager", LocalDate.parse("2023-01-15"), null, 50000.00);
             Employee employee = employeeRepository.findById(1);
-            Assertions.assertEquals(expected.toString(), employee.toString());
+            assertEquals(expected.toString(), employee.toString());
+        }
+
+        @Test
+        public void shouldThrowIllegalArgumentExceptionWhenInvalidIdProvided() {
+            assertThrows(IllegalArgumentException.class, () -> employeeRepository.findById(-1));
         }
 
     }
@@ -111,29 +105,24 @@ class EmployeeRepositoryTest {
             List<Employee> expected = returnsEmployeesData();
 
             List<Employee> actual = employeeRepository.findAll();
-            Assertions.assertEquals(expected.size(), actual.size());
+            assertEquals(expected.size(), actual.size());
             for (int i = 0; i < actual.size(); i++) {
-                Assertions.assertEquals(expected.get(i).toString(), actual.get(i).toString());
+                assertEquals(expected.get(i).toString(), actual.get(i).toString());
             }
-
-
         }
-
     }
 
     @Nested
     public class FindByPosition {
 
         @Test
-        void shouldfindByPositionWhenValidARgument() throws SQLException {
+        void shouldFindByPositionWhenValidArgument() throws SQLException {
             String position = "Manager";
             List<Employee> actual = employeeRepository.findByPosition(position);
-            List<Employee> expected = returnsfilteredEmployeesByPosition(returnsEmployeesData(), position);
+            List<Employee> expected = returnsFilteredEmployeesByPosition(returnsEmployeesData(), position);
             for (int i = 0; i < actual.size(); i++) {
-                Assertions.assertEquals(expected.get(i).toString(), actual.get(i).toString());
+                assertEquals(expected.get(i).toString(), actual.get(i).toString());
             }
-
-
         }
 
         @Test
@@ -153,37 +142,135 @@ class EmployeeRepositoryTest {
 
     @Nested
     public class Save {
-
-
         @Test
-        void save() throws SQLException {
-            String dateString = "2023-01-15";
-            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-            LocalDate date = LocalDate.parse(dateString, formatter);
+        void saveEmployeeWithAllData() throws SQLException {
             Employee newEmployee = new Employee();
-            newEmployee.setName("JJJJ");
-            newEmployee.setSurname("Kiss");
-            newEmployee.setPositionEml("DADSAD");
-            newEmployee.setDateOfEmployment(date);
-            newEmployee.setSalary(123.33);
-
+            newEmployee.setName("John");
+            newEmployee.setSurname("Doe");
+            newEmployee.setPhone("555-1234");
+            newEmployee.setPositionEml("Manager");
+            newEmployee.setDateOfEmployment(LocalDate.parse("2023-01-15"));
+            newEmployee.setSalary(50000.0);
             Employee employee = employeeRepository.save(newEmployee);
-            newEmployee.setId(11);
-
-            Assertions.assertEquals(newEmployee.toString(), employee.toString());
+            newEmployee.setId(idForAdding);
+            assertEquals(newEmployee.toString(), employee.toString());
         }
 
         @Test
-        void update() throws SQLException {
-            String dateString = "2023-01-15";
-            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-            LocalDate date = LocalDate.parse(dateString, formatter);
+        void saveEmployeeWithMinimalData() throws SQLException {
+            Employee newEmployee = new Employee();
+            newEmployee.setName("Jane");
+            newEmployee.setSurname("Smith");
+            newEmployee.setPositionEml("Developer");
+            Employee employee = employeeRepository.save(newEmployee);
+            newEmployee.setId(idForAdding);
+            newEmployee.setDateOfEmployment(LocalDate.now());
+            assertEquals(newEmployee.toString(), employee.toString());
+        }
+
+        @Test
+        void saveEmployeeWithDismissalDateAndNullSalary() throws SQLException {
+            Employee newEmployee = new Employee();
+            newEmployee.setName("Alice");
+            newEmployee.setSurname("Johnson");
+            newEmployee.setPositionEml("Designer");
+            newEmployee.setDateOfEmployment(LocalDate.parse("2023-03-10"));
+            newEmployee.setDateOfDismissal(LocalDate.parse("2023-06-15"));
+            newEmployee.setSalary(null);
+            Employee employee = employeeRepository.save(newEmployee);
+            newEmployee.setId(idForAdding);
+            assertEquals(newEmployee.toString(), employee.toString());
+        }
+
+
+    }
+
+    @Nested
+    public class Update {
+        @Test
+        void shouldThrowExceptionWhenNameIsNull() {
+            Employee employee = new Employee(null, null,
+                    "Surname", "Position", null, null, null, 1000.0);
+            IllegalArgumentException exception =
+                    assertThrows(IllegalArgumentException.class, () -> employeeRepository.save(employee));
+            assertEquals("Employee name cannot be empty.", exception.getMessage());
+        }
+
+        @Test
+        void shouldThrowExceptionWhenSurnameIsNull() {
+            Employee employee = new Employee(null, "Name",
+                    null, "Position", null, null, null, 1000.0);
+            IllegalArgumentException exception =
+                    assertThrows(IllegalArgumentException.class, () -> employeeRepository.save(employee));
+            assertEquals("Employee surname cannot be empty.", exception.getMessage());
+        }
+
+        @Test
+        void shouldThrowExceptionWhenPositionIsNull() {
+            Employee employee = new Employee(null, "Name",
+                    "Surname", null, null, null, null, 1000.0);
+            IllegalArgumentException exception =
+                    assertThrows(IllegalArgumentException.class, () -> employeeRepository.save(employee));
+            assertEquals("Employee position cannot be empty.", exception.getMessage());
+        }
+
+        @Test
+        void shouldThrowExceptionWhenSalaryIsInvalid() {
+            Employee employee = new Employee(null, "Name",
+                    "Surname", null, "Position", null, null, -1000.0);
+            IllegalArgumentException exception =
+                    assertThrows(IllegalArgumentException.class, () -> employeeRepository.save(employee));
+            assertEquals("Employee's salary must be in the range from 0.00 to 9,999,999.99.", exception.getMessage());
+        }
+
+        @Test
+        void shouldThrowExceptionWhenDateOfEmploymentIsInFuture() {
+            Employee employee = new Employee("Name", "Surname",
+                    null, "Position", LocalDate.parse("2030-01-01"), null, 1000.0);
+            IllegalArgumentException exception =
+                    assertThrows(IllegalArgumentException.class, () -> employeeRepository.save(employee));
+            assertEquals("Date of employment cannot be in the future.", exception.getMessage());
+        }
+
+        @Test
+        void shouldThrowExceptionWhenDateOfDismissalIsBeforeDateOfEmployment() {
+            Employee employee = new Employee("Name", "Surname",
+                    null, "Position", LocalDate.parse("2023-01-01"), LocalDate.parse("2022-12-31"), 1000.0);
+            IllegalArgumentException exception =
+                    assertThrows(IllegalArgumentException.class, () -> employeeRepository.save(employee));
+            assertEquals("Date of dismissal cannot be earlier than date of employment.", exception.getMessage());
+        }
+
+
+        @Test
+        void shouldUpdateEmployeeWithNewDataPhone() throws SQLException {
             Employee newEmployee = new Employee(1, "John",
                     "Doe", "6-54445-444", "Manager",
                     LocalDate.parse("2023-01-15"), null, 50000.0);
             Employee employee = employeeRepository.save(newEmployee);
-            Assertions.assertEquals(newEmployee.toString(), employee.toString());
+            assertEquals(newEmployee.toString(), employee.toString());
 
+
+        }
+
+        @Test
+        void shouldUpdateEmployeeWithDifferentDate() throws SQLException {
+            Employee newEmployee = new Employee(1, "brad",
+                    "Dav", "6-54445-444", "It-CON",
+                    LocalDate.parse("2023-01-15"), LocalDate.now(), 150000.0);
+            Employee employee = employeeRepository.save(newEmployee);
+            assertEquals(newEmployee.toString(), employee.toString());
+
+
+        }
+
+        @Test
+        void shouldUpdateEmployeeWithNullDate() throws SQLException {
+            Employee newEmployee = new Employee(1, "John",
+                    "Doe", null, "Manager",
+                    LocalDate.parse("2023-01-15"), null, null);
+            Employee employee = employeeRepository.save(newEmployee);
+            assertEquals(newEmployee.toString(), employee.toString());
 
         }
 
@@ -211,14 +298,15 @@ class EmployeeRepositoryTest {
                 new Employee(9, "Olivia", "Taylor", "555-4321",
                         "Marketing Specialist", LocalDate.parse("2023-05-09"), null, 47000.0),
                 new Employee(10, "William", "Anderson", "555-8901",
-                        "IT Specialist", LocalDate.parse("2022-07-12"), null, 63000.0)
+                        "IT Specialist", LocalDate.parse("2022-07-12"), null, 63000.0),
+
         };
 
-        return new ArrayList<>(Arrays.asList(employeesArray));
+        return new ArrayList<>(List.of(employeesArray));
     }
 
 
-    private List<Employee> returnsfilteredEmployeesByPosition(List<Employee> allEmployees, String position) {
+    private List<Employee> returnsFilteredEmployeesByPosition(List<Employee> allEmployees, String position) {
         return allEmployees.stream()
                 .filter(employee -> employee.getPositionEml().equals(position)) // Фильтр по должности
                 .collect(Collectors.toList());
